Fixed bug where last item in long list was hidden by bottom bar

--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -59,6 +59,7 @@ html, body {
 .scroll-view{
   overflow-x: hidden;
   overflow-y: auto;
+  padding-bottom: 40px;
 }
 
 .fileItem{
